# remago_autotable_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install.cmd  install.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2707a922a1f4_initial.py  3a2fe2a9d96a_initial.py  5e69f741d43a_initial.py
src/: facades.py
src/bot/: constants.py  filters.py  handlers.py  keyboards.py  stages.py
src/bot/utils/: formatters.py  validators.py
src/db/: models.py  settings.py
